# agentic-web-browser

./: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  hello.py  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/agent/: browser.py  prompts.py  tools.py
app/api/: routes.py
app/core/: config.py  db.py  models.py  scoring.py
frontend/: app.js  index.html  style.css
modal/: deploy.py  model_deploy.py
tests/: conftest.py  test_api.py  test_hitl.py  test_media.py
