[project]
name = "agentic-web-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.138.0",
    "helium>=7.0.2",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "selenium>=4.45.0",
    "smolagents[openai]>=1.26.0",
    "uvicorn>=0.49.0",
]
